fix: remove overflow:hidden from body, enable vertical scroll

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,10 +5,11 @@
 @layer base {
   html, body {
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
   #__next {
-    height: 100%;
+    min-height: 100%;
   }
 }
 
